--- a/template.qmd
+++ b/template.qmd
@@ -10,7 +10,7 @@ date: last-modified
 author:
   - name: Author 1
     acknowledgements: | 
-      The authors gratefully acknowledge _please remember to list all relevant funding sources in the unblinded version_.
+      The authors gratefully acknowledge _please remember to list all relevant funding sources in the non-anonymized (unblinded) version_.
     affiliations:
       - name: University of XXX
         department: Department of YYY
@@ -28,8 +28,22 @@ bibliography: bibliography.bib
 
 ## Introduction {#sec-intro}
 
-Body of paper.  Margins in this document are roughly 0.75 inches all
-around, letter size paper.
+Body of paper.
+Margins in this document are roughly 0.75 inches all around, letter size paper.
+
+```{r}
+#| label: fig-scatter1
+#| echo: false
+#| message: false
+#| warning: false
+#| fig-cap: A not very interesting scatterplot
+library(tidyverse)
+ds <- tibble(x = 1:5, y = 5:1)
+ggplot(ds, aes(x = x, y = y)) + geom_point()
+```
+
+@fig-scatter1 displays a non-stochastic relationship.
+
 
 ![Consistency comparison in fitting surrogate model in the tidal power example.](fig1.pdf){#fig-first width=3in}
 
@@ -42,12 +56,12 @@ around, letter size paper.
 : D-optimality values for design X under five different scenarios. {#tbl-one}
 
 - Note that figures and tables (such as @fig-first and @tbl-one) should appear in the paper, not at the end or in separate files.
-- In document front matter, you may set the key `blinded` under a `journal` key to hide the authors and acknowledgements, producing the required blinded version.
-- Remember that in the blind version, you should not identify authors indirectly in the text.  That is, don't say "In Smith et. al.  (2009) we showed that ...". Instead, say "Smith et. al. (2009) showed that ...".
+- In document front matter, you may set the key `blinded` under a `journal` key to hide the authors and acknowledgements, producing the required anonymized version.
+- Remember that in the anonymized version, you should not identify authors indirectly in the text.  That is, don't say "In Smith et. al.  (2009) we showed that ...". Instead, say "Smith et. al. (2009) showed that ...".
 - These points are only intended to remind you of some requirements.
 Please refer to the instructions for authors
 at [http://amstat.tandfonline.com/action/authorSubmission?journalCode=uasa20&page=instructions#.VFkk7fnF_0c](http://amstat.tandfonline.com/action/authorSubmission?journalCode=uasa20&page=instructions#.VFkk7fnF_0c)
-- For more about ASA\ style, please see [http://journals.taylorandfrancis.com/amstat/asa-style-guide/](http://journals.taylorandfrancis.com/amstat/asa-style-guide/)
+- For more about ASA\ style, please see [https://files.taylorandfrancis.com/asa-style-guide.pdf](https://files.taylorandfrancis.com/asa-style-guide.pdf).
 - If you have supplementary material (e.g., software, data, technical
 proofs), identify them in the section below.  In early stages of the
 submission process, you may be unsure what to include as supplementary
@@ -55,18 +69,19 @@ material.  Don't worry---this is something that can be worked out at later stage
 
 ## Methods {#sec-meth}
 
-Don't take any of these section titles seriously.  They're just for
-illustration.
+Don't take any of these section titles seriously.
+They're just for illustration.
 
 ## Verifications {#sec-verify}
 
-This section will be just long enough to illustrate what a full page of
-text looks like, for margins and spacing.
+This section will be just long enough to illustrate what a full page of text looks like, for margins and spacing.
 
 
 :::{add-textheight=".5in"}
 
-@Campbell02, @Schubert13, @Chi81
+@gelm:veht:2021 offer some guidance about key ideas about statistical ideas.
+On an unrelated note, spreadsheets are important to use correctly [@brom:woo:2018].
+Log-linear models are an attractive way to model categorical data [@bish:fien:1975].
 
 The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
@@ -100,8 +115,6 @@ The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
-
-%new margin nere
 
 The quick brown fox jumped over the lazy dog.
 The quick brown fox jumped over the lazy dog.
@@ -194,6 +207,14 @@ The quick brown fox jumped over the lazy dog.
 
 ## Conclusion {#sec-conc}
 
+## Disclosure statement
+
+The authors have the following conflicts of interest to declare (or replace with a statement that no conflicts of interest exist).
+
+## Data Availability Statement
+
+Deidentified data have been made available at the following URL: XX.
+
 ## Supplementary Material {.supplementary}
 
 Title:
@@ -211,4 +232,5 @@ HIV data set:
 
 ## BibTeX 
 
-We hope you've chosen to use BibTeX! If you have, please feel free to use the package natbib with any bibliography style you're comfortable with. The .bst file agsm has been included here for your convenience. 
+We hope you've chosen to use BibTeX!
+If you have, please feel free to use the package natbib with any bibliography style you're comfortable with. The .bst file agsm has been included here for your convenience. 
