Addressed feedback from repo owners: https://github.com/quarto-journals/jasa/pull/2 1. removed R chunk (to avoid having to install R to use template) 2. Tweaked reference format ("Boston, MA: MIT Press").

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -32,7 +32,7 @@
     title = {Discrete Multivariate Analyses: Theory and Practice},
     year = {1975},
     pages = {557},
-    publisher = {MIT Press}
+    publisher = {Boston, MA: MIT Press}
 }   
 
 
