--- a/_extensions/jasa/partials/before-body.tex
+++ b/_extensions/jasa/partials/before-body.tex
@@ -15,7 +15,7 @@ $if(journal.blinded)$
 \bigskip
 \bigskip
 \begin{center}
-  {\LARGE\bf Title}
+  {\LARGE\bf $title$}
 \end{center}
 \smallskip
 \bigskip
